--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
 .App {
-  text-align: center;
+    text-align: center;
+    background-color: black;
+    padding: 5px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+header {
+    background-color: white;
+    text-align: center;
+    padding: 5px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+nav {
+    text-align: center;
+    color: white;
+}
+.main_content {
+    background-color: #E0E0E0;
+    text-align: center;
+    margin-top: 5px;
+    padding: 5px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+footer {
+  margin-top: 5px;
+  padding: 5px;
+  background-color: grey;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/*desktop view*/
+@media screen and (min-width: 600px) {
+
 }
