--- a/src/App/App.css
+++ b/src/App/App.css
@@ -12,7 +12,7 @@ header {
 
 nav {
     text-align: center;
-    color: white;
+    background-color: #8D8B8B;
 }
 .main_content {
     background-color: #E0E0E0;
